--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -14,5 +14,8 @@
         on <a href="https://www.pluralsight.com">Pluralsight</a>.
     </p>
     <img src="/static/flasklogo.svg">
+    <p>
+        {{message}}
+    </p>
 </body>
 </html>
