--- a/templates/card.html
+++ b/templates/card.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flash Card</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Flash Card</h1>
-    Question: {{card.question}} <br>
+    Question: {{card.question}} <br />
     Answer: {{card.answer}}
     <p>
-        <button>
-            <a href="{{ url_for('welcome') }}">
-                Home
-            </a>
-        </button>
-        <button>
-            <a href="{{ url_for('card_view', index=index + 1) }}">
-                Next card
-            </a>
-        </button>
+      <a href="{{ url_for('welcome') }}">Home</a>
+      <button>
+        {% if index < max_index %}
+        <a href="{{ url_for('card_view', index=index + 1) }}"> Next card </a>
+        {% else %}
+        <a href="{{ url_for('card_view', index=0) }}"> Start over </a>
+        {% endif %}
+      </button>
     </p>
-</body>
+  </body>
 </html>
