--- a/templates/add_card.html
+++ b/templates/add_card.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Add a new card</h1>
-    <form>
+    <form method="post">
         <p>
             Question:
             <input type="text" name="question">
