--- a/templates/add_card.html
+++ b/templates/add_card.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Card</title>
-</head>
-<body>
-    <h1>Add a new card</h1>
-    <form method="post">
-        <p>
-            Question:
-            <input type="text" name="question">
-        </p>
-        <p>
-            Answer:
-            <input type="text" name="answer">
-        </p>
-        <button type="submit">Create</button>
-    </form>
-</body>
-</html>
+{% extends 'base.html' %} {% block title %}Add Card{% endblock %} {% block
+content %}
+<h1>Add a new card</h1>
+<form method="post">
+  <p>
+    Question:
+    <input type="text" name="question" />
+  </p>
+  <p>
+    Answer:
+    <input type="text" name="answer" />
+  </p>
+  <button type="submit">Create</button>
+</form>
+{% endblock %}
