--- a/templates/remove_card.html
+++ b/templates/remove_card.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remove Card</title>
-</head>
-<body>
-    <h1>Remove this card</h1>
-    Question: {{ card.question }} <br>
-    Answer: {{ card.answer }}
+{% extends 'base.html' %} {% block title %}Add Card{% endblock %} {% block
+content %}
+<h1>Remove this card</h1>
+Question: {{ card.question }} <br />
+Answer: {{ card.answer }}
 
-    <h2>Are you sure?</h2>
-    <form method="post">
-        
-        <button type="submit">Yes</button>
-        <a href="{{ url_for('welcome') }}">No</a>
-    </form>
-</body>
-</html>
+<h2>Are you sure?</h2>
+<form method="post">
+  <button type="submit">Yes</button>
+  <a href="{{ url_for('welcome') }}">No</a>
+</form>
+{% endblock %}
