--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,32 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome!</title>
-  </head>
-  <body>
-    <h1>Welcome to my page!</h1>
-    <p>
-      This is the demo application for the Flask course.
-      <em>Getting Started with Flask</em>
-      on <a href="https://www.pluralsight.com">Pluralsight</a>.
-    </p>
-    <img src="/static/flasklogo.svg" />
-    <p>{{message}}</p>
+{% extends 'base.html' %} {% block title %}Welcome{% endblock %} {% block
+content %}
+<h1>Welcome to my page!</h1>
+<p>
+  This is the demo application for the Flask course.
+  <em>Getting Started with Flask</em>
+  on <a href="https://www.pluralsight.com">Pluralsight</a>.
+</p>
+<img src="/static/flasklogo.svg" />
+<p>{{message}}</p>
 
-    <h2>Flash Cards</h2>
-    <ul>
-      {% for card in cards %}
-      <li>
-        <a href="{{ url_for('card_view', index=loop.index0) }}">
-          {{ card.question }}
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
+<h2>Flash Cards</h2>
+<ul>
+  {% for card in cards %}
+  <li>
+    <a href="{{ url_for('card_view', index=loop.index0) }}">
+      {{ card.question }}
+    </a>
+  </li>
+  {% endfor %}
+</ul>
 
-    <a href="{{ url_for('add_card') }}">Add a card</a>
-  </body>
-</html>
+<a href="{{ url_for('add_card') }}">Add a card</a>
+{% endblock %}
