--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %} {% block title %}Welcome{% endblock %} {% block
 content %}
-<h1>Welcome to my page!</h1>
-<p>
-  This is the demo application for the Flask course.
-  <em>Getting Started with Flask</em>
-  on <a href="https://www.pluralsight.com">Pluralsight</a>.
-</p>
-<img src="/static/flasklogo.svg" />
+<div>
+  <img src="/static/flasklogo.svg" />
+  <h1>Welcome to my page!</h1>
+  <p>
+    This is the demo application for the Flask course.
+    <em>Getting Started with Flask</em> by by Reindert-Jan Ekker on <a href="https://www.pluralsight.com">Pluralsight</a>.
+  </p>
+</div>
+
 <p>{{message}}</p>
 
 <h2>Flash Cards</h2>
